# first-principles

./: LICENSE  first-principles.cabal
app/: Main.hs
src/: HelloHaskell.hs
